[gd_scene load_steps=16 format=3 uid="uid://d0w7547jkpfhn"]

[ext_resource type="PackedScene" uid="uid://d3avvdamh18iv" path="res://art/player.glb" id="1_jamdf"]
[ext_resource type="Script" path="res://player.gd" id="1_p0ioj"]
[ext_resource type="PackedScene" uid="uid://fe50r73q8n7a" path="res://art/glock19.glb" id="3_3tta2"]
[ext_resource type="AudioStream" uid="uid://bmx7l5j1rwcna" path="res://art/gun.ogg" id="4_sg5n3"]

[sub_resource type="SphereShape3D" id="SphereShape3D_kd75q"]
radius = 0.75

[sub_resource type="CylinderShape3D" id="CylinderShape3D_wvftp"]
height = 0.2
radius = 1.025

[sub_resource type="Animation" id="Animation_ypnr4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Character:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Character:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_hnvxb"]
resource_name = "float"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Character:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.7, 1.2),
"transitions": PackedFloat32Array(0.42, 2.07, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.65, 0), Vector3(0, 0.35, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Character:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.5, 1.2),
"transitions": PackedFloat32Array(0.42, 0.44, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.139626, 0, 0), Vector3(-0.15708, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8o1en"]
_data = {
"RESET": SubResource("Animation_ypnr4"),
"float": SubResource("Animation_hnvxb")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gn4o6"]
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 0.05
emission_ring_inner_radius = 0.0
direction = Vector3(-1, 0, 0)
spread = 20.0
gravity = Vector3(0, -0.05, 0)
initial_velocity_min = 50.0
initial_velocity_max = 50.0
angle_max = 45.0
turbulence_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fca7a"]
transparency = 1
albedo_color = Color(0.941176, 0.768627, 0.345098, 0.85098)

[sub_resource type="SphereMesh" id="SphereMesh_rn5y3"]
material = SubResource("StandardMaterial3D_fca7a")
radius = 0.05
height = 0.1

[sub_resource type="Animation" id="Animation_7musr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GunPivot/Gun:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -1.5708, 0)]
}

[sub_resource type="Animation" id="Animation_o2od6"]
resource_name = "shoot"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GunPivot/Gun:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(0.017337, 0.297302, 1),
"update": 0,
"values": [Vector3(0, -1.5708, 0), Vector3(0, -1.5708, -0.523599), Vector3(0, -1.5708, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k85uj"]
_data = {
"RESET": SubResource("Animation_7musr"),
"shoot": SubResource("Animation_o2od6")
}

[node name="Player" type="CharacterBody3D"]
collision_mask = 6
script = ExtResource("1_p0ioj")

[node name="Pivot" type="Node3D" parent="."]

[node name="Character" parent="Pivot" instance=ExtResource("1_jamdf")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
shape = SubResource("SphereShape3D_kd75q")

[node name="MobDetector" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="MobDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
shape = SubResource("CylinderShape3D_wvftp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "float"
libraries = {
"": SubResource("AnimationLibrary_8o1en")
}

[node name="Gunshot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_sg5n3")
volume_db = -2.0
max_polyphony = 10

[node name="GunPivot" type="Node3D" parent="."]

[node name="Gun" parent="GunPivot" instance=ExtResource("3_3tta2")]
transform = Transform3D(-3.61999e-07, 0, -0.1, 0, 0.1, 0, 0.1, 0, -3.61999e-07, 0, 0.927557, -1.37881)

[node name="Smoke" type="GPUParticles3D" parent="GunPivot/Gun"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.44511, 1.32701, 1.50591e-07)
emitting = false
lifetime = 0.15
one_shot = true
explosiveness = 1.0
trail_lifetime = 0.15
process_material = SubResource("ParticleProcessMaterial_gn4o6")
draw_pass_1 = SubResource("SphereMesh_rn5y3")

[node name="RaycastCast" type="RayCast3D" parent="GunPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
target_position = Vector3(0, 0, -20)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true

[node name="GunAnimator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k85uj")
}

[connection signal="body_entered" from="MobDetector" to="." method="_on_mob_detector_body_entered"]
